Fix flickering nav bar when scrolling. Stop working because holiday

--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -5,7 +5,7 @@ header.navigation {
   $base-accent-color: #477DCA !default;
   $dark-gray: #333 !default;
   $large-screen: em(860) !default;
-  
+
   a {
     text-decoration: none;
   }
@@ -25,6 +25,10 @@ header.navigation {
   $navigation-submenu-padding: 1em;
   $navigation-submenu-width: 12em;
   $horizontal-bar-mode: $large-screen;
+
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
 
   background-color: $navigation-background;
   border-bottom: 1px solid darken($navigation-background, 10);
